deployments/kind-cluster-dev/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rancher-local
  namespace: cattle-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/real-ip-header: "CF-Connecting-IP"
spec:
  ingressClassName: nginx
  rules:
    - host: rancher.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rancher
                port:
                  number: 80

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minio-console
#   namespace: minio-tenant
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#     # nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   ingressClassName: nginx
#   tls:
#     - hosts:
#         - minio.local.com
#       secretName: myminio-tls
#   rules:
#     - host: minio.local.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: myminio-console
#                 port:
#                   number: 9443
